Ejecución Algoritmo AFP

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,30 @@
     "\n",
     "salario_liquido = 2500000\n",
     "salario_bruto = 2983813\n",
-    "monto_ahorrado = 5018141"
+    "monto_ahorrado = 8403740 #5018141"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nicol\\AppData\\Local\\Temp\\ipykernel_19736\\3662370702.py:27: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df = pd.read_html(str(table))[0]\n",
+      "C:\\Users\\nicol\\AppData\\Local\\Temp\\ipykernel_19736\\3662370702.py:27: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df = pd.read_html(str(table))[0]\n",
+      "C:\\Users\\nicol\\AppData\\Local\\Temp\\ipykernel_19736\\3662370702.py:27: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df = pd.read_html(str(table))[0]\n",
+      "C:\\Users\\nicol\\AppData\\Local\\Temp\\ipykernel_19736\\3662370702.py:27: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df = pd.read_html(str(table))[0]\n",
+      "C:\\Users\\nicol\\AppData\\Local\\Temp\\ipykernel_19736\\3662370702.py:27: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df = pd.read_html(str(table))[0]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -53,67 +69,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CAPITAL</th>\n",
-       "      <td>-3,42%</td>\n",
-       "      <td>-2,05%</td>\n",
-       "      <td>-2,54%</td>\n",
-       "      <td>-3,98%</td>\n",
-       "      <td>-4,32%</td>\n",
+       "      <td>16,95%</td>\n",
+       "      <td>12,93%</td>\n",
+       "      <td>5,89%</td>\n",
+       "      <td>-1,58%</td>\n",
+       "      <td>-4,10%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CUPRUM</th>\n",
-       "      <td>-3,04%</td>\n",
-       "      <td>-1,89%</td>\n",
-       "      <td>-2,44%</td>\n",
-       "      <td>-3,74%</td>\n",
-       "      <td>-4,29%</td>\n",
+       "      <td>17,32%</td>\n",
+       "      <td>13,20%</td>\n",
+       "      <td>5,68%</td>\n",
+       "      <td>-1,54%</td>\n",
+       "      <td>-4,13%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HABITAT</th>\n",
-       "      <td>-2,97%</td>\n",
-       "      <td>-1,86%</td>\n",
-       "      <td>-2,53%</td>\n",
-       "      <td>-4,21%</td>\n",
-       "      <td>-4,77%</td>\n",
+       "      <td>17,36%</td>\n",
+       "      <td>13,22%</td>\n",
+       "      <td>5,67%</td>\n",
+       "      <td>-1,89%</td>\n",
+       "      <td>-4,19%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MODELO</th>\n",
-       "      <td>-2,79%</td>\n",
-       "      <td>-1,78%</td>\n",
-       "      <td>-2,16%</td>\n",
-       "      <td>-3,73%</td>\n",
-       "      <td>-4,34%</td>\n",
+       "      <td>18,08%</td>\n",
+       "      <td>13,90%</td>\n",
+       "      <td>6,09%</td>\n",
+       "      <td>-1,37%</td>\n",
+       "      <td>-4,16%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PLANVITAL</th>\n",
-       "      <td>-2,92%</td>\n",
-       "      <td>-1,69%</td>\n",
-       "      <td>-2,39%</td>\n",
-       "      <td>-3,93%</td>\n",
-       "      <td>-4,55%</td>\n",
+       "      <td>17,60%</td>\n",
+       "      <td>13,72%</td>\n",
+       "      <td>6,06%</td>\n",
+       "      <td>-1,51%</td>\n",
+       "      <td>-4,19%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PROVIDA</th>\n",
-       "      <td>-3,66%</td>\n",
-       "      <td>-2,49%</td>\n",
-       "      <td>-3,33%</td>\n",
-       "      <td>-4,47%</td>\n",
-       "      <td>-4,86%</td>\n",
+       "      <td>17,19%</td>\n",
+       "      <td>12,98%</td>\n",
+       "      <td>5,37%</td>\n",
+       "      <td>-1,92%</td>\n",
+       "      <td>-4,51%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>UNO</th>\n",
-       "      <td>-2,90%</td>\n",
-       "      <td>-1,99%</td>\n",
-       "      <td>-2,44%</td>\n",
-       "      <td>-3,81%</td>\n",
-       "      <td>-4,38%</td>\n",
+       "      <td>17,86%</td>\n",
+       "      <td>13,67%</td>\n",
+       "      <td>5,98%</td>\n",
+       "      <td>-1,38%</td>\n",
+       "      <td>-3,95%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SISTEMA</th>\n",
-       "      <td>-3,18%</td>\n",
-       "      <td>-1,99%</td>\n",
-       "      <td>-2,67%</td>\n",
-       "      <td>-4,16%</td>\n",
-       "      <td>-4,54%</td>\n",
+       "      <td>17,31%</td>\n",
+       "      <td>13,27%</td>\n",
+       "      <td>5,69%</td>\n",
+       "      <td>-1,76%</td>\n",
+       "      <td>-4,21%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,17 +137,17 @@
       ],
       "text/plain": [
        "          Fondo A Fondo B Fondo C Fondo D Fondo E\n",
-       "CAPITAL    -3,42%  -2,05%  -2,54%  -3,98%  -4,32%\n",
-       "CUPRUM     -3,04%  -1,89%  -2,44%  -3,74%  -4,29%\n",
-       "HABITAT    -2,97%  -1,86%  -2,53%  -4,21%  -4,77%\n",
-       "MODELO     -2,79%  -1,78%  -2,16%  -3,73%  -4,34%\n",
-       "PLANVITAL  -2,92%  -1,69%  -2,39%  -3,93%  -4,55%\n",
-       "PROVIDA    -3,66%  -2,49%  -3,33%  -4,47%  -4,86%\n",
-       "UNO        -2,90%  -1,99%  -2,44%  -3,81%  -4,38%\n",
-       "SISTEMA    -3,18%  -1,99%  -2,67%  -4,16%  -4,54%"
+       "CAPITAL    16,95%  12,93%   5,89%  -1,58%  -4,10%\n",
+       "CUPRUM     17,32%  13,20%   5,68%  -1,54%  -4,13%\n",
+       "HABITAT    17,36%  13,22%   5,67%  -1,89%  -4,19%\n",
+       "MODELO     18,08%  13,90%   6,09%  -1,37%  -4,16%\n",
+       "PLANVITAL  17,60%  13,72%   6,06%  -1,51%  -4,19%\n",
+       "PROVIDA    17,19%  12,98%   5,37%  -1,92%  -4,51%\n",
+       "UNO        17,86%  13,67%   5,98%  -1,38%  -3,95%\n",
+       "SISTEMA    17,31%  13,27%   5,69%  -1,76%  -4,21%"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,67 +248,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CAPITAL</th>\n",
-       "      <td>-0.0342</td>\n",
-       "      <td>-0.0205</td>\n",
-       "      <td>-0.0254</td>\n",
-       "      <td>-0.0398</td>\n",
-       "      <td>-0.0432</td>\n",
+       "      <td>0.1695</td>\n",
+       "      <td>0.1293</td>\n",
+       "      <td>0.0589</td>\n",
+       "      <td>-0.0158</td>\n",
+       "      <td>-0.0410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CUPRUM</th>\n",
-       "      <td>-0.0304</td>\n",
-       "      <td>-0.0189</td>\n",
-       "      <td>-0.0244</td>\n",
-       "      <td>-0.0374</td>\n",
-       "      <td>-0.0429</td>\n",
+       "      <td>0.1732</td>\n",
+       "      <td>0.1320</td>\n",
+       "      <td>0.0568</td>\n",
+       "      <td>-0.0154</td>\n",
+       "      <td>-0.0413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HABITAT</th>\n",
-       "      <td>-0.0297</td>\n",
-       "      <td>-0.0186</td>\n",
-       "      <td>-0.0253</td>\n",
-       "      <td>-0.0421</td>\n",
-       "      <td>-0.0477</td>\n",
+       "      <td>0.1736</td>\n",
+       "      <td>0.1322</td>\n",
+       "      <td>0.0567</td>\n",
+       "      <td>-0.0189</td>\n",
+       "      <td>-0.0419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MODELO</th>\n",
-       "      <td>-0.0279</td>\n",
-       "      <td>-0.0178</td>\n",
-       "      <td>-0.0216</td>\n",
-       "      <td>-0.0373</td>\n",
-       "      <td>-0.0434</td>\n",
+       "      <td>0.1808</td>\n",
+       "      <td>0.1390</td>\n",
+       "      <td>0.0609</td>\n",
+       "      <td>-0.0137</td>\n",
+       "      <td>-0.0416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PLANVITAL</th>\n",
-       "      <td>-0.0292</td>\n",
-       "      <td>-0.0169</td>\n",
-       "      <td>-0.0239</td>\n",
-       "      <td>-0.0393</td>\n",
-       "      <td>-0.0455</td>\n",
+       "      <td>0.1760</td>\n",
+       "      <td>0.1372</td>\n",
+       "      <td>0.0606</td>\n",
+       "      <td>-0.0151</td>\n",
+       "      <td>-0.0419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PROVIDA</th>\n",
-       "      <td>-0.0366</td>\n",
-       "      <td>-0.0249</td>\n",
-       "      <td>-0.0333</td>\n",
-       "      <td>-0.0447</td>\n",
-       "      <td>-0.0486</td>\n",
+       "      <td>0.1719</td>\n",
+       "      <td>0.1298</td>\n",
+       "      <td>0.0537</td>\n",
+       "      <td>-0.0192</td>\n",
+       "      <td>-0.0451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>UNO</th>\n",
-       "      <td>-0.0290</td>\n",
-       "      <td>-0.0199</td>\n",
-       "      <td>-0.0244</td>\n",
-       "      <td>-0.0381</td>\n",
-       "      <td>-0.0438</td>\n",
+       "      <td>0.1786</td>\n",
+       "      <td>0.1367</td>\n",
+       "      <td>0.0598</td>\n",
+       "      <td>-0.0138</td>\n",
+       "      <td>-0.0395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SISTEMA</th>\n",
-       "      <td>-0.0318</td>\n",
-       "      <td>-0.0199</td>\n",
-       "      <td>-0.0267</td>\n",
-       "      <td>-0.0416</td>\n",
-       "      <td>-0.0454</td>\n",
+       "      <td>0.1731</td>\n",
+       "      <td>0.1327</td>\n",
+       "      <td>0.0569</td>\n",
+       "      <td>-0.0176</td>\n",
+       "      <td>-0.0421</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -300,17 +316,17 @@
       ],
       "text/plain": [
        "           Fondo A  Fondo B  Fondo C  Fondo D  Fondo E\n",
-       "CAPITAL    -0.0342  -0.0205  -0.0254  -0.0398  -0.0432\n",
-       "CUPRUM     -0.0304  -0.0189  -0.0244  -0.0374  -0.0429\n",
-       "HABITAT    -0.0297  -0.0186  -0.0253  -0.0421  -0.0477\n",
-       "MODELO     -0.0279  -0.0178  -0.0216  -0.0373  -0.0434\n",
-       "PLANVITAL  -0.0292  -0.0169  -0.0239  -0.0393  -0.0455\n",
-       "PROVIDA    -0.0366  -0.0249  -0.0333  -0.0447  -0.0486\n",
-       "UNO        -0.0290  -0.0199  -0.0244  -0.0381  -0.0438\n",
-       "SISTEMA    -0.0318  -0.0199  -0.0267  -0.0416  -0.0454"
+       "CAPITAL     0.1695   0.1293   0.0589  -0.0158  -0.0410\n",
+       "CUPRUM      0.1732   0.1320   0.0568  -0.0154  -0.0413\n",
+       "HABITAT     0.1736   0.1322   0.0567  -0.0189  -0.0419\n",
+       "MODELO      0.1808   0.1390   0.0609  -0.0137  -0.0416\n",
+       "PLANVITAL   0.1760   0.1372   0.0606  -0.0151  -0.0419\n",
+       "PROVIDA     0.1719   0.1298   0.0537  -0.0192  -0.0451\n",
+       "UNO         0.1786   0.1367   0.0598  -0.0138  -0.0395\n",
+       "SISTEMA     0.1731   0.1327   0.0569  -0.0176  -0.0421"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,92 +375,92 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>MODELO</th>\n",
-       "      <td>Fondo B</td>\n",
+       "      <td>Fondo A</td>\n",
        "      <td>0.0058</td>\n",
-       "      <td>-0.0178</td>\n",
+       "      <td>0.1808</td>\n",
        "      <td>51918.3462</td>\n",
-       "      <td>-263227.187087</td>\n",
-       "      <td>-315145.533287</td>\n",
+       "      <td>5431976.065678</td>\n",
+       "      <td>5380057.719478</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>UNO</th>\n",
-       "      <td>Fondo B</td>\n",
+       "      <td>Fondo A</td>\n",
        "      <td>0.0049</td>\n",
-       "      <td>-0.0199</td>\n",
+       "      <td>0.1786</td>\n",
        "      <td>43862.0511</td>\n",
-       "      <td>-293660.861605</td>\n",
-       "      <td>-337522.912705</td>\n",
+       "      <td>5354786.281311</td>\n",
+       "      <td>5310924.230211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PLANVITAL</th>\n",
-       "      <td>Fondo B</td>\n",
+       "      <td>Fondo A</td>\n",
        "      <td>0.0116</td>\n",
-       "      <td>-0.0169</td>\n",
+       "      <td>0.176</td>\n",
        "      <td>103836.6924</td>\n",
-       "      <td>-250144.276555</td>\n",
-       "      <td>-353980.968955</td>\n",
+       "      <td>5263932.778762</td>\n",
+       "      <td>5160096.086362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HABITAT</th>\n",
-       "      <td>Fondo B</td>\n",
+       "      <td>Fondo A</td>\n",
        "      <td>0.0127</td>\n",
-       "      <td>-0.0186</td>\n",
+       "      <td>0.1736</td>\n",
        "      <td>113683.2753</td>\n",
-       "      <td>-274836.330634</td>\n",
-       "      <td>-388519.605934</td>\n",
+       "      <td>5180423.808085</td>\n",
+       "      <td>5066740.532785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CUPRUM</th>\n",
-       "      <td>Fondo B</td>\n",
+       "      <td>Fondo A</td>\n",
        "      <td>0.0144</td>\n",
-       "      <td>-0.0189</td>\n",
+       "      <td>0.1732</td>\n",
        "      <td>128900.7216</td>\n",
-       "      <td>-279184.88308</td>\n",
-       "      <td>-408085.60468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CAPITAL</th>\n",
-       "      <td>Fondo B</td>\n",
-       "      <td>0.0144</td>\n",
-       "      <td>-0.0205</td>\n",
-       "      <td>128900.7216</td>\n",
-       "      <td>-302332.282146</td>\n",
-       "      <td>-431233.003746</td>\n",
+       "      <td>5166538.803564</td>\n",
+       "      <td>5037638.081964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PROVIDA</th>\n",
-       "      <td>Fondo B</td>\n",
+       "      <td>Fondo A</td>\n",
        "      <td>0.0145</td>\n",
-       "      <td>-0.0249</td>\n",
+       "      <td>0.1719</td>\n",
        "      <td>129795.8655</td>\n",
-       "      <td>-365598.711206</td>\n",
-       "      <td>-495394.576706</td>\n",
+       "      <td>5121477.889101</td>\n",
+       "      <td>4991682.023601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAPITAL</th>\n",
+       "      <td>Fondo A</td>\n",
+       "      <td>0.0144</td>\n",
+       "      <td>0.1695</td>\n",
+       "      <td>128900.7216</td>\n",
+       "      <td>5038550.786322</td>\n",
+       "      <td>4909650.064722</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Fondo Comisión % Rentabilidad %   Comisiones   Rentabilidad  \\\n",
-       "MODELO     Fondo B     0.0058        -0.0178   51918.3462 -263227.187087   \n",
-       "UNO        Fondo B     0.0049        -0.0199   43862.0511 -293660.861605   \n",
-       "PLANVITAL  Fondo B     0.0116        -0.0169  103836.6924 -250144.276555   \n",
-       "HABITAT    Fondo B     0.0127        -0.0186  113683.2753 -274836.330634   \n",
-       "CUPRUM     Fondo B     0.0144        -0.0189  128900.7216  -279184.88308   \n",
-       "CAPITAL    Fondo B     0.0144        -0.0205  128900.7216 -302332.282146   \n",
-       "PROVIDA    Fondo B     0.0145        -0.0249  129795.8655 -365598.711206   \n",
+       "             Fondo Comisión % Rentabilidad %   Comisiones    Rentabilidad  \\\n",
+       "MODELO     Fondo A     0.0058         0.1808   51918.3462  5431976.065678   \n",
+       "UNO        Fondo A     0.0049         0.1786   43862.0511  5354786.281311   \n",
+       "PLANVITAL  Fondo A     0.0116          0.176  103836.6924  5263932.778762   \n",
+       "HABITAT    Fondo A     0.0127         0.1736  113683.2753  5180423.808085   \n",
+       "CUPRUM     Fondo A     0.0144         0.1732  128900.7216  5166538.803564   \n",
+       "PROVIDA    Fondo A     0.0145         0.1719  129795.8655  5121477.889101   \n",
+       "CAPITAL    Fondo A     0.0144         0.1695  128900.7216  5038550.786322   \n",
        "\n",
-       "                   Saldo  \n",
-       "MODELO    -315145.533287  \n",
-       "UNO       -337522.912705  \n",
-       "PLANVITAL -353980.968955  \n",
-       "HABITAT   -388519.605934  \n",
-       "CUPRUM     -408085.60468  \n",
-       "CAPITAL   -431233.003746  \n",
-       "PROVIDA   -495394.576706  "
+       "                    Saldo  \n",
+       "MODELO     5380057.719478  \n",
+       "UNO        5310924.230211  \n",
+       "PLANVITAL  5160096.086362  \n",
+       "HABITAT    5066740.532785  \n",
+       "CUPRUM     5037638.081964  \n",
+       "PROVIDA    4991682.023601  \n",
+       "CAPITAL    4909650.064722  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
